fixed breaking layout on small resolutions (QUICK FIX, whole layout CSS should be refactored)

--- a/public/stylesheets/sass/constraints.sass
+++ b/public/stylesheets/sass/constraints.sass
@@ -75,7 +75,6 @@
         
     .first
       background: none
-      padding-left: 20px
       
     h3
       font-family: Georgia, "Times New Roman", Times, serif
