--- a/public/stylesheets/sass/new_slider.sass
+++ b/public/stylesheets/sass/new_slider.sass
@@ -34,7 +34,7 @@ $slider-box-height: 22px
 
   label
     line-height: 15px
-    width: 124px
+    width: 122px
 
   .slider-controls
     float: right
